--- a/travelWebsiteBackend/travelManager/src/main/resources/application.properties
+++ b/travelWebsiteBackend/travelManager/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 spring.application.name=travelManager
 #MySQL Configuration
-spring.datasource.url=jdbc:mysql://localhost:3306/travelManager
-spring.datasource.username=root
-spring.datasource.password=M-Kamron?9531741--
+spring.datasource.url=jdbc:mysql://${DB_HOST}:${DB_PORT}/${DB_NAME}
+spring.datasource.username=${DB_USERNAME}
+spring.datasource.password=${DB_PASSWORD}
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
